OPENSVC-2647- Enhance  CSS for Cardiac Risk App to fix alignment's in iFrames. Fixes #188.

--- a/public/cardiac-risk-app-2.0/src/less/cardiacRisk.less
+++ b/public/cardiac-risk-app-2.0/src/less/cardiacRisk.less
@@ -13,7 +13,7 @@
 
 body {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   margin: 0;
 }
 
@@ -36,7 +36,7 @@ body {
 
 .loadingIndicatorLayout {
   display: table-cell;
-  height: 100vh;
+  height: 300px;
   width: 100vw;
   text-align: center;
   vertical-align: middle;
@@ -63,7 +63,6 @@ body {
 .contentLayout {
   display: table;
   text-align: center;
-  height: 100vh;
   width: 100%;
   margin: 0 auto;
   overflow: hidden;
