--- a/public/cardiac-risk-app/src/stylesheets/cardiac_risk.css
+++ b/public/cardiac-risk-app/src/stylesheets/cardiac_risk.css
@@ -567,7 +567,7 @@
 }
 body {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   margin: 0;
 }
 * {
@@ -585,7 +585,7 @@ body {
 }
 .loadingIndicatorLayout {
   display: table-cell;
-  height: 100vh;
+  height: 300px;
   width: 100vw;
   text-align: center;
   vertical-align: middle;
@@ -613,7 +613,6 @@ body {
 .contentLayout {
   display: table;
   text-align: center;
-  height: 100vh;
   width: 100%;
   margin: 0 auto;
   overflow: hidden;
